# duby

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  deploy.sh  docker-compose.yml  my_portfolio.yaml  pyproject.toml
agents/: channel_monitor.py  mcp_server.py  price_monitor.py  telegram_bot.py
api/: main.py
api/routes/: alerts.py  invest.py  market.py  portfolio.py
core/: __init__.py  database.py  finance.py  portfolio_yaml.py  timeseries.py  wio_parser.py
dashboard/: app.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: CandlestickChart.tsx
frontend/src/pages/: Dashboard.tsx  Overview.tsx  Position.tsx
litellm/: config.yaml
scripts/: get_channel_id.sh
